styles.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@400;500;700&display=swap');
* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
    font-family: 'Roboto', sans-serif;
}

nav {
    height: 80px;
    display: flex;
}

img {
    width: 100%;
    height: 100%;
    max-height: 50vh;
    padding: 20px;
}

p {
    line-height: 1.5;
}

.nav__container {
    width: 100%;
    max-width: 1200px;
    padding: 0 24px;
    display: flex;
    justify-content: space-between;
    align-items: center;
    margin: 0 auto;
}

.purple {
    color: #7342d6;
}

.logo {
    width: 160px;
}

ul {
    display: flex;
}

li {
    list-style-type: none;
}

.nav__link {
    margin-left: 16px;
    text-decoration: none;
    font-size: 20px;
    color: #7342d6;
    font-weight: bold;
    padding: 8px;
}

.nav__link:hover {
    text-decoration: underline;
}

.nav__link--primary {
    border: 2px solid #7342d6;
    border-radius: 4px;
}

.nav__link--primary:hover {
    text-decoration: none;
}

#landing {
    background-color: rgba(115, 66, 214, 0.1);
}

header {
    height: calc(100vh - 80px);
}

.header__container {
    padding-top: 32px;
    width: 100%;
    max-width: 720px;
    margin: 0 auto;
    height: 100%;
    display: flex;
    flex-direction: column;
    justify-content: space-around;
}

.header__description {
    display: flex;
    flex-direction: column;
    align-items: center;
}

h1 {
    font-size: 56px;
    color: #7342d6;
    margin-bottom: 24px;
    text-align: center;
}

h2 {
    font-size: 32px;
    margin-bottom: 32px;
    text-align: center;
}

button {
    cursor: pointer;
}

button:active {
    transform: translateY(1px);
}

.btn {
    background-color: #7342d6;
    color: white;
    padding: 12px 24px;
    font-size: 20px;
    border-radius: 4px;
    border: none;
}

.header__img--wrapper {
    padding: 20px;
}

.container {
    padding: 50px 0;
}

.row {
    width: 100%;
    max-width: 1200px;
    margin: 0 auto;
}
/* 

HIGHLIGHTS 

*/

#highlights {
    position: relative;
}

#highlights:before {
    content:"dfdsfa";
}

#highlights:before {
    background: url('assets/wave.svg');
    content: "";
    position: absolute;
    width: 101vw;
    height: 12vw;
    top: 1px;
    left: 0;
    z-index: 1;
    background-size: cover;
    background-repeat: no-repeat;
    transform: translateY(-100%);
}

.highlight__wrapper {
    display: flex;
}

.highlight {
    padding: 0 24px;
    width: calc(100% / 3);
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;
}

.highlight__para {
    text-align: center;
    max-width: 280px;
}

.highlight__img {
    border: 2px solid #7342d65d;
    color: #7342d6;
    width: 100px;
    height: 100px;
    display: flex;
    align-items: center;
    justify-content: center;
    border-radius: 4px;
    font-size: 32px;
    margin-bottom: 24px;
}

.highlight__subtitle {
    font-size: 20px;
    margin-bottom: 16px;
}

